Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
@@ -54,6 +54,8 @@
       <li tabindex="-1">Minus one</li>
     </ul>
 
+    <h2>Delegation: focusin/focusout</h2>
+
     <script>
       const email = document.getElementById("email");
       const error = document.getElementById("error");
