Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
@@ -60,7 +60,8 @@
 
     <h2>Delegation: focusin/focusout</h2>
     <form onfocus="this.className='focused'">
-
+      <input type="text" name="name" value="Name">
+      <input type="text" name="surname" value="Surname">
     </form>
 
     <script>
