--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
@@ -73,11 +73,17 @@
 
     <br>
 
-    <form 
-      name="focusin-out" 
+    <form
       onfocusin="this.className='focused';"
       onfocusout="this.classList.remove('focused');"
     >
+      <input type="text" name="name" value="Name">
+      <input type="text" name="surname" value="Surname">
+    </form>
+
+    <br>
+
+    <form name="focusin-out">
       <input type="text" name="name" value="Name">
       <input type="text" name="surname" value="Surname">
     </form>
