Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
@@ -160,6 +160,10 @@
         console.log("onfocusout");
         focusInOut.classList.remove("focused");
       }
+
+      window.addEventListener("focusin", function() {
+        console.log(document.activeElement);
+      });
     </script>
   </body>
 </html>
