--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/editable-div.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/editable-div.html
@@ -1,6 +1,32 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      .view,
+      .edit {
+        height: 150px;
+        width: 400px;
+        font-family: sans-serif;
+        font-size: 14px;
+        display: block;
+      }
+
+      .view {
+        /* padding + border = 3px */
+        padding: 2px;
+        border: 1px solid black;
+      }
+    </style>
+  </head>
   <body>
+    <ul>
+      <li>Click the div to edit.</li>
+      <li>Enter or blur saves the result.</li>
+    </ul>
+
+    HTML is allowed.
+    <div class="view" id="view">Text</div>
+
     <script>
       console.log("Ola");
     </script>
