--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/editable-div.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/editable-div.html
@@ -42,11 +42,17 @@
       const view = document.getElementById("view");
       const textarea = document.querySelector(".edit");
       view.onfocus = function() {
-        this.style.display = "none";
+        view.style.display = "none";
         const textarea = document.createElement("textarea");
         textarea.classList.add("edit");
         textarea.value = view.innerHTML;
         document.body.append(textarea);
+
+        textarea.onblur = function() {
+          view.style.display = "block";
+          view.innerHTML = textarea.value;
+          textarea.style.display = "none";
+        }
       }
     </script>
   </body>
