Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/editable-div.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/editable-div.html
@@ -47,6 +47,7 @@
         textarea.classList.add("edit");
         textarea.value = view.innerHTML;
         document.body.append(textarea);
+        textarea.focus();
 
         textarea.onblur = function() {
           view.style.display = "block";
