Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/editable-div.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/editable-div.html
@@ -54,6 +54,14 @@
           view.innerHTML = textarea.value;
           textarea.style.display = "none";
         }
+
+        textarea.onkeydown = function(e) {
+          if (e.code === "Enter") {
+            view.style.display = "block";
+            view.innerHTML = textarea.value;
+            textarea.style.display = "none";
+          }
+        }
       }
     </script>
   </body>
