--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <p>
+      Click on a table cell to edit it. Press OK or CANCEL when you finish.
+    </p>
+
+    <table id="bagua-table">
+      <tr>
+        <th colspan="3"><em>Bagua</em> Chart: Direction, Element, Color, Meaning</th>
+      </tr>
+      <tr>
+        <td class="nw"><strong>Northwest</strong>
+          <br>Metal
+          <br>Silver
+          <br>Elders
+        </td>
+        <td class="n"><strong>North</strong>
+          <br>Water
+          <br>Blue
+          <br>Change
+        </td>
+        <td class="ne"><strong>Northeast</strong>
+          <br>Earth
+          <br>Yellow
+          <br>Direction
+        </td>
+      </tr>
+    </table>
+
     <script>
       console.log("Ola");
     </script>
