--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -26,6 +26,40 @@
           <br>Direction
         </td>
       </tr>
+      <tr>
+        <td class="w"><strong>West</strong>
+          <br>Metal
+          <br>Gold
+          <br>Youth
+        </td>
+        <td class="c"><strong>Center</strong>
+          <br>All
+          <br>Purple
+          <br>Harmony
+        </td>
+        <td class="e"><strong>East</strong>
+          <br>Wood
+          <br>Blue
+          <br>Future
+        </td>
+      </tr>
+      <tr>
+        <td class="sw"><strong>Southwest</strong>
+          <br>Earth
+          <br>Brown
+          <br>Tranquility
+        </td>
+        <td class="s"><strong>South</strong>
+          <br>Fire
+          <br>Orange
+          <br>Fame
+        </td>
+        <td class="se"><strong>Southeast</strong>
+          <br>Wood
+          <br>Green
+          <br>Romance
+        </td>
+      </tr>
     </table>
 
     <script>
