Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -121,7 +121,11 @@
     </table>
 
     <script>
-      console.log("Ola");
+      const table = document.getElementById("bagua-table");
+      
+      table.onclick = function() {
+
+      }
     </script>
   </body>
 </html>
