Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -122,6 +122,7 @@
 
     <script>
       const table = document.getElementById("bagua-table");
+      let area = null;
 
       table.onclick = function(e) {
         const td = e.target.closest("td");
@@ -131,6 +132,11 @@
         if (!this.contains(td)) {
           return;
         }
+
+        area = document.createElement("textarea");
+        area.value = td.innerHTML;
+        td.replaceWith(area);
+        area.focus();
       }
     </script>
   </body>
