Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/keyboard-driven-mouse.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/keyboard-driven-mouse.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <p>
+      Click on the mouse and move it with arrow keys.
+    </p>
+
+    <pre id="mouse">
+       _   _
+      (q\_/p)
+       /. .\
+      =\_t_/=   __
+       /   \   (
+      ((   ))   )
+      /\) (/\  /
+      \  Y  /-'
+       nn^nn
+    </pre>
+
     <script>
       console.log("Ola");
     </script>
