Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -122,21 +122,22 @@
 
     <script>
       const table = document.getElementById("bagua-table");
-      let area = null;
+      let textarea = null;
 
       table.onclick = function(e) {
         const td = e.target.closest("td");
 
-        if (!td) { return; }
+        if (!td) { 
+          return; 
+        }
 
         if (!this.contains(td)) {
           return;
         }
 
-        area = document.createElement("textarea");
-        area.value = td.innerHTML;
-        td.replaceWith(area);
-        area.focus();
+        textarea = document.createElement("textarea");
+        
+        
       }
     </script>
   </body>
