--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -2,10 +2,123 @@
 <html>
   <head>
     <style>
+      /* common styles for the table, no need to modify these */
 
+      th {
+        text-align: center;
+        font-weight: bold;
+      }
+
+      td {
+        width: 150px;
+        white-space: nowrap;
+        text-align: center;
+        vertical-align: middle;
+        padding: 10px;
+      }
+
+      .nw {
+        background-color: #999;
+      }
+
+      .n {
+        background-color: #03f;
+        color: #fff;
+      }
+
+      .ne {
+        background-color: #ff6;
+      }
+
+      .w {
+        background-color: #ff0;
+      }
+
+      .c {
+        background-color: #60c;
+        color: #fff;
+      }
+
+      .e {
+        background-color: #09f;
+        color: #fff;
+      }
+
+      .sw {
+        background-color: #963;
+        color: #fff;
+      }
+
+      .s {
+        background-color: #f60;
+        color: #fff;
+      }
+
+      .se {
+        background-color: #0c3;
+        color: #fff;
+      }
     </style>
   </head>
   <body>
-    
+    <p>Click on a table cell to edit it. Press OK or CANCEL when you finish.</p>
+
+    <table id="bagua-table">
+      <tr>
+        <th colspan="3"><em>Bagua</em> Chart: Direction, Element, Color, Meaning</th>
+      </tr>
+      <tr>
+        <td class="nw"><strong>Northwest</strong>
+          <br>Metal
+          <br>Silver
+          <br>Elders
+        </td>
+        <td class="n"><strong>North</strong>
+          <br>Water
+          <br>Blue
+          <br>Change
+        </td>
+        <td class="ne"><strong>Northeast</strong>
+          <br>Earth
+          <br>Yellow
+          <br>Direction
+        </td>
+      </tr>
+      <tr>
+        <td class="w"><strong>West</strong>
+          <br>Metal
+          <br>Gold
+          <br>Youth
+        </td>
+        <td class="c"><strong>Center</strong>
+          <br>All
+          <br>Purple
+          <br>Harmony
+        </td>
+        <td class="e"><strong>East</strong>
+          <br>Wood
+          <br>Blue
+          <br>Future
+        </td>
+      </tr>
+      <tr>
+        <td class="sw"><strong>Southwest</strong>
+          <br>Earth
+          <br>Brown
+          <br>Tranquility
+        </td>
+        <td class="s"><strong>South</strong>
+          <br>Fire
+          <br>Orange
+          <br>Fame
+        </td>
+        <td class="se"><strong>Southeast</strong>
+          <br>Wood
+          <br>Green
+          <br>Romance
+        </td>
+      </tr>
+
+    </table>
   </body>
 </html>
