Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -118,7 +118,10 @@
           <br>Romance
         </td>
       </tr>
-
     </table>
+
+    <script>
+      const table = document.getElementById("bagua-table");
+    </script>
   </body>
 </html>
