Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -3,7 +3,6 @@
   <head>
     <style>
       /* common styles for the table, no need to modify these */
-
       th {
         text-align: center;
         font-weight: bold;
@@ -122,6 +121,12 @@
 
     <script>
       const table = document.getElementById("bagua-table");
+
+      table.onclick = function(e) {
+        // 3 possible targets
+        const target = e.target.closest(".edit-cancel, .edit-ok, td");
+        console.log(target);
+      }
     </script>
   </body>
 </html>
