Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -125,7 +125,10 @@
       table.onclick = function(e) {
         // 3 possible targets
         const target = e.target.closest(".edit-cancel, .edit-ok, td");
+        
+        if (!table.contains(target)) return;
         console.log(target);
+        
       }
     </script>
   </body>
