Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -122,6 +122,8 @@
     <script>
       const table = document.getElementById("bagua-table");
 
+      let editingTd;
+
       table.onclick = function(e) {
         // 3 possible targets
         const target = e.target.closest(".edit-cancel, .edit-ok, td");
