--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -157,9 +157,9 @@
         if (!table.contains(target)) return;
 
         if (target.className === "edit-cancel") {
-
+          console.log(target.className);
         } else if (target.className === "edit-ok") {
-
+          console.log(target.className);
         } else if (target.nodeName === "TD") {
           if (editingTd) return; // already editing
 
