Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -157,14 +157,22 @@
         if (!table.contains(target)) return;
 
         if (target.className === "edit-cancel") {
-          console.log(target.className);
+          finishTdEdit(editingTd.elem, false);
         } else if (target.className === "edit-ok") {
-          console.log(target.className);
+          finishTdEdit(editingTd.elem, true);
         } else if (target.nodeName === "TD") {
           if (editingTd) return; // already editing
 
           makeTdEditable(target);
         }
+      }
+
+      function finishTdEdit(td, isOk) {
+        if (isOk) {
+          td.innerHTML = td.firstChild.value;
+        }
+        td.classList.remove("edit-td");
+        editingTd = null;
       }
 
       function makeTdEditable(td) {
