Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/edit-td-on-click.html
@@ -170,6 +170,8 @@
       function finishTdEdit(td, isOk) {
         if (isOk) {
           td.innerHTML = td.firstChild.value;
+        } else {
+          td.innerHTML = editingTd.data;
         }
         td.classList.remove("edit-td");
         editingTd = null;
