Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/keyboard-driven-mouse.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/keyboard-driven-mouse.html
@@ -43,12 +43,16 @@
       mouse.onkeydown = function(e) {
         switch(e.key) {
           case "ArrowLeft": 
+            console.log(e.key, e.code);
             return false;
           case "ArrowUp":
+            console.log(e.key, e.code);
             return false;
           case "ArrowRight":
+            console.log(e.key, e.code);
             return false;
           case "ArrowDown":
+            console.log(e.key, e.code);
             return false;
         }
       }
