Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/keyboard-driven-mouse.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/keyboard-driven-mouse.html
@@ -43,13 +43,13 @@
       mouse.onkeydown = function(e) {
         switch(e.key) {
           case "ArrowLeft": 
-            console.log(e.key, e.code);
+            this.style.left = parseInt(this.style.left) - this.offsetWidth + "px";
             return false;
           case "ArrowUp":
             console.log(e.key, e.code);
             return false;
           case "ArrowRight":
-            console.log(e.key, e.code);
+            this.style.left = parseInt(this.style.left) + this.offsetWidth + "px";
             return false;
           case "ArrowDown":
             console.log(e.key, e.code);
