Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/keyboard-driven-mouse.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/keyboard-driven-mouse.html
@@ -52,7 +52,7 @@
             this.style.left = parseInt(this.style.left) + this.offsetWidth + "px";
             return false;
           case "ArrowDown":
-            console.log(e.key, e.code);
+            this.style.top = parseInt(this.style.top) + this.offsetHeight + "px";
             return false;
         }
       }
