--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/keyboard-driven-mouse.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/tasks/keyboard-driven-mouse.html
@@ -34,7 +34,8 @@
       const mouse = document.getElementById("mouse");
       mouse.tabIndex = 0;
 
-      mouse.onclick = function() {
+      // mouse.onclick = function() {
+      mouse.onfocus = function() {
         this.style.left = this.getBoundingClientRect().left + "px";
         this.style.top = this.getBoundingClientRect().top + "px";
         this.style.position = "fixed";
@@ -46,7 +47,7 @@
             this.style.left = parseInt(this.style.left) - this.offsetWidth + "px";
             return false;
           case "ArrowUp":
-            console.log(e.key, e.code);
+            this.style.top = parseInt(this.style.top) - this.offsetHeight + "px";
             return false;
           case "ArrowRight":
             this.style.left = parseInt(this.style.left) + this.offsetWidth + "px";
