Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
@@ -2,6 +2,8 @@
 <html>
   <body>
     <h2>Event: change</h2>
+    <input type="text" onchange="console.log(event.type)">
+    <input type="button" value="Button">
     <script>
       console.log("Ola, tudo bem?");
     </script>
