Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
@@ -13,6 +13,11 @@
       <option value="3">Option 3</option>
     </select>
 
+    <h3>input:checkbox, input:radio</h3>
+    <label>
+      <input onchange="console.log(event.type, this.nodeName)" type="checkbox"> Agree
+    </label>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
