Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
@@ -25,6 +25,8 @@
       <input onchange="console.log(event.type, this.value)" type="radio" name="genre" value="female"> Female
     </label>
 
+    <h2>Event: input</h2>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
