Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
@@ -38,6 +38,7 @@
 
       document.onpaste = function(e) {
         console.log("paste: " + e.clipboardData.getData("text/plain"));
+        e.preventDefault();
       }
     </script>
   </body>
