Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
@@ -36,8 +36,15 @@
         document.getElementById("result").innerHTML = this.value;
       }
 
-      document.onpaste = function(e) {
+      const input = document.getElementById("copy");
+
+      input.onpaste = function(e) {
         console.log("paste: " + e.clipboardData.getData("text/plain"));
+        e.preventDefault();
+      }
+
+      input.oncut = input.oncopy = function(e) {
+        console.log(e.type + "-" + document.getSelection());
         e.preventDefault();
       }
     </script>
