--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <p style="background-color: lightcoral; padding: 10px;">
+      It’s possible to copy/paste not just text, but everything. For instance, we can copy a file in the OS file manager, and paste it.
+    </p>
+
     <h2>Event: change</h2>
     <input type="text" onchange="console.log(event.type)">
     <input type="button" value="Button">
