--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
@@ -39,6 +39,8 @@
     <h2>Events: cut, copy and paste</h2>
     <input type="text" id="copy">
 
+    <h2>File</h2>
+
     <script>
       document.getElementById("input").oninput = function() {
         document.getElementById("result").innerHTML = this.value;
