Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
@@ -40,6 +40,11 @@
     <input type="text" id="copy">
 
     <h2>File</h2>
+    <input onchange="console.log(this.value)" type="file">
+    
+    <p>
+      <input type="text">
+    </p>
 
     <script>
       document.getElementById("input").oninput = function() {
