Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/index.html
@@ -39,10 +39,12 @@
     <h2>Events: cut, copy and paste</h2>
     <input type="text" id="copy">
 
-    <h2>File</h2>
-    <input onchange="console.log(typeof this.value)" type="file">
+    <h2 style="background-color: lightcoral;">File</h2>
+    <p style="background-color: lightcoral;">
+      <input onchange="console.log(typeof this.value)" type="file">
+    </p>
 
-    <p>
+    <p style="background-color: lightcoral;">
       <input onchange="console.log(typeof this.value)" type="text">
     </p>
 
