Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
@@ -5,6 +5,18 @@
   </head>
   <body>
     Deposit calculator.
+
+    <form name="calculator">
+      <table>
+        <tr>
+          <td>Initial deposit</td>
+          <td>
+            <input type="number" name="money" value="10000" required>
+          </td>
+        </tr>
+      </table>
+    </form>
+      
     <script>
       console.log("Ola");
     </script>
