--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
@@ -14,6 +14,14 @@
             <input type="number" name="money" value="10000" required>
           </td>
         </tr>
+        <tr>
+          <td>How many months?</td>
+          <td>
+            <select name="months">
+              <option value="3">3 (minimum)</option>
+            </select>
+          </td>
+        </tr>
       </table>
     </form>
       
