Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
@@ -19,6 +19,13 @@
           <td>
             <select name="months">
               <option value="3">3 (minimum)</option>
+              <option value="6">6 (half-year)</option>
+              <option value="12" selected>12 (one year)</option>
+              <option value="18">18 (1.5 years)</option>
+              <option value="24">24 (2 years)</option>
+              <option value="30">30 (2.5 years)</option>
+              <option value="36">36 (3 years)</option>
+              <option value="60">60 (5 years)</option>
             </select>
           </td>
         </tr>
