Events: change, input, cut, copy and paste

--- a/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/events-change-input-cut-copy-paste/tasks/deposit-calculator.html
@@ -29,6 +29,12 @@
             </select>
           </td>
         </tr>
+        <tr>
+          <td>Interest per year?</td>
+          <td>
+            <input type="number" name="interest" value="5" required>
+          </td>
+        </tr>
       </table>
     </form>
       
